# scafld-go

./: .gitignore  AGENTS.md  Makefile  go.mod
.github/workflows/: ci.yml  release.yml
.scafld/core/: OPERATORS.md  README.md  manifest.json
.scafld/runs/claude-codex-providers/: session.json
.scafld/runs/command-provider-review/: session.json
.scafld/runs/go-parity-hardening/: session.json
.scafld/runs/package-registry-release/: session.json
.scafld/runs/provider-parity-polish/: session.json
.scafld/runs/provider-schema-enforcement/: session.json
.scafld/runs/provider-stdin-prompt/: session.json
.scafld/runs/real-claude-review-smoke/: session.json
.scafld/runs/real-codex-review-smoke/: session.json
.scafld/runs/review-mutation-guard/: session.json
cmd/scafld/: main.go
docs/: architecture.md  cutover.md  distribution.md  operational-contracts.md  parity-report.md  release.md
internal/arch/: architecture_test.go
package/: README.md
package/docker/: README.md
package/homebrew/: scafld.rb.tmpl
package/npm/: README.md  package.json
package/pypi/: README.md  pyproject.toml
package/pypi/src/scafld_launcher/: __init__.py  __main__.py  cli.py  install.py  platform.py
package/scoop/: scafld.json.tmpl
package/winget/: scafld.installer.yaml.tmpl  scafld.version.yaml.tmpl  scafld.yaml.tmpl
scripts/: build-release-artifacts.sh  generate-core-bundle.go  set-release-version.sh
test/ci/: local_ci_test.go
test/e2e/: lifecycle_test.go
test/parity/: parity_test.go
test/release/: build_matrix_test.go  packaging_test.go
(+91 files in other folders)
