[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scafld"
version = "0.0.0"
description = "Markdown-native task execution framework CLI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "nilstate" }]
keywords = ["cli", "go", "markdown", "agents", "workflow"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools"
]

[project.urls]
Homepage = "https://github.com/nilstate/scafld"
Repository = "https://github.com/nilstate/scafld"
Issues = "https://github.com/nilstate/scafld/issues"

[project.scripts]
scafld = "scafld_launcher.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
